# TrascriviDiario

./: .env.example  .gitignore  README.md  pyproject.toml
src/diario/: __init__.py  api.py  cli.py  config.py
src/diario/services/: audio.py  normalize.py  preview.py  transcribe.py
